# SoftEtherClient

./: .gitignore  .gitmodules  3rd-party-app-log.txt  ARCHITECTURE.md  ARCHITECTURE_TLS.md  CROSS_PLATFORM.md  CURRENT_STATUS.md  DOCS_INDEX.md  DOCUMENTATION_SUMMARY.md  IOS_BUILD_GUIDE.md  IOS_BUILD_STRATEGY.md  LOCALBRIDGE_QUICKREF.md  LOGGING.md  LOGGING_REFACTORING_SUMMARY.md  PACKET_FLOW_DIAGRAMS.md  PREPRODUCTION_CHECKLIST.md  PREPRODUCTION_QUICKREF.md  PREPRODUCTION_SUMMARY.md  QUICKREF.md  QUICKSTART.md  README.md  SECURENAT_VS_LOCALBRIDGE.md  SECURITY.md  TEMP.md  TESTING.md  build.zig  build.zig.zon  build_ios.sh  build_ios_framework.sh  build_ios_xcframework.sh  c_sources_minimal.txt  config.example.json  config.minimal.json  config.schema.json  test_cedar_client.zig  test_http_format.zig  test_mayaqua.zig  test_rustls_integration.zig  test_sha0.c  test_sha0.zig  (+3 more)
.github/workflows/: ci.yml  release.yml
SoftEtherClient.xcframework/: Info.plist
SoftEtherClient.xcframework/ios-arm64/Headers/: mobile_ffi.h  zig_packet_adapter.h
android/: CMakeLists.txt  INTEGRATION.md  README.md
android/jni/: mobile_jni.c  softether_jni.c
android/kotlin/: SoftEtherBridge.kt  SoftEtherClient.kt  SoftEtherMobileClient.kt  SoftEtherVpnService.kt  VpnClientService.kt
build_xcframework/SoftEtherVPN.xcframework/: Info.plist
build_xcframework/device/SoftEtherVPN.framework/: Info.plist
build_xcframework/ios-arm64-simulator/Headers/: ffi.h
cedar/: Cargo.toml  build.rs  cbindgen.toml
cedar/src/: adapter_ffi.rs  auth.rs  compression.rs  connection.rs  dhcp.rs  encryption.rs  ffi.rs  lib.rs  nat_traversal.rs  protocol.rs  session.rs  session_tmp.rs  udp_accel.rs
cedar/src/dhcp/: client.rs  mod.rs  packets.rs  parser.rs
docs/: CONFIGURATION.md  IOS_INTEGRATION.md  MOBILE_INTEGRATION.md  PHASE2_COMPLETE.md  README.md  ROUTING_CONFIG.md  ROUTING_QUICKREF.md  TAPTUN_INTEGRATION.md  UNIFIED_ARCHITECTURE.md  ZIG_PORT_ROADMAP.md
examples/: cedar_example.zig  key_derivation_example.zig  logging_example.zig  profiling_example.zig  simple_connect.zig
include/: cedar_ffi.h  direct_api.h  ffi.h  softether_ffi.h  zig_packet_adapter.h
ios/: API_REFERENCE.md  INTEGRATION.md  PacketTunnelProvider-Info.plist  README.md
ios/C/: module.modulemap  softether_ios.c  softether_ios.h
ios/Swift/: PacketTunnelProvider.swift  SoftEtherBridge.swift  SoftEtherClient.swift  SoftEtherMobileClient.swift  SoftEtherPacketTunnelProvider.swift
legacy/ffi/: README.md
mayaqua/: Cargo.toml  README.md  build.rs  cbindgen.toml
mayaqua/mayaqua-core/: Cargo.toml
mayaqua/mayaqua-core/src/: buffer.rs  lib.rs
mayaqua/mayaqua-ffi/: Cargo.toml  build.rs
mayaqua/mayaqua-ffi/src/: lib.rs
mayaqua/src/: buffer.rs  config.rs  crypto.rs  error.rs  ffi.rs  http.rs  lib.rs  memory.rs  network.rs  platform.rs  sha0.rs  strings.rs  tables.rs  time.rs  tls.rs  tls_verifier.rs  types.rs
rust_tls/: Cargo.toml  build.rs
rust_tls/src/: lib.rs
rustls_migration/: INDEX.md  README.md
scripts/: benchmark.sh  benchmark_adapters.sh  build_android.sh  build_ios.sh  build_ios_xcode.sh  build_xcframework.sh  configure_vpn.sh  download_openssl_ios.sh  test_dual_mode.sh  test_keepalive.sh  test_profiling.sh
src/: c.zig  cli.zig  client.zig  client_c_bridge_backup.zig  client_pure.zig  config.zig  errors.zig  ffi.zig  log.zig  logging.zig  main.zig  mayaqua.zig  packet_forward.zig  profiling.zig  rustls.zig  ssl_compat.zig  ssl_compat_cedar.zig  test_cedar_integration.zig  test_config_loading.zig  test_rustls.zig  tls_connection.zig  types.zig
src/bridge/: c.zig  client_bridge.c  client_bridge.h  direct_api.c  ios_build_wrapper.c  ios_ffi.c  log_control.h  logging.c  logging.h  mod.zig  packet_adapter_ios_stub.c  packet_adapter_linux.c  packet_adapter_linux.h  packet_adapter_macos.c  packet_adapter_macos.c.bak2  packet_adapter_macos.c.bak3  packet_adapter_macos.h  packet_adapter_windows.c  packet_adapter_windows.h  packet_utils.c  packet_utils.h  performance_tuning.c  performance_tuning.h  security_utils.c.backup  session_helper.c  session_helper.h  softether.zig  softether_bridge.c  softether_bridge.h  taptun_compat.zig  taptun_wrapper.h  taptun_wrapper.zig  tick64_linux.c  tick64_macos.c  unix_bridge.c  zig_bridge.c  zig_bridge.h  zig_bridge_exports.zig  zig_packet_adapter.c  zig_packet_adapter.h
src/bridge/Cedar/: Bridge.c  BridgeUnix.c  BridgeWin32.h  Cedar.h  CedarPch.h  Client.c  Connection.c  Connection.c.bak  Hub.c  IPsec.c  IPsec_EtherIP.c  IPsec_IKE.c  IPsec_IPC.c  IPsec_IkePacket.c  IPsec_L2TP.c  IPsec_PPP.c  (+12 more)
src/cedar/: auth.zig  connection.zig  crypto.zig  mod.zig  protocol.zig  wrapper.zig
src/core/: client.zig  vpn_core.zig
src/ffi/: ffi.zig  ios_adapter_stub_root.zig  ios_adapter_stubs.c  ios_compat.zig  ios_stubs.c  mobile.zig  mobile_ffi.zig  mobile_ffi_c.c  mobile_impl.zig  mobile_stub.zig
src/integration/: vpn_client.zig
src/mayaqua/: buffer.zig  collections.zig  config.zig  crypto.zig  error.zig  fs.zig  http.zig  memory.zig  network.zig  pack.zig  platform.zig  str.zig  string.zig  strings.zig  tables.zig  time.zig
src/net/: connection.zig  http.zig  socket.zig  ssl_socket.zig  unified_socket.zig
src/packet/: adapter.zig  adapter_test.zig  adaptive_buffer.zig  batch.zig  bench_adapter.zig  bench_crypto.zig  checksum.zig  dhcp.zig  metrics.zig  mod.zig  packet.zig  packet_pool.zig  protocol.zig  protocol_test.zig  ring_buffer.zig  softet her_callbacks.zig  utils.zig
src/platform/: device.zig  linux.zig  macos.zig  test_linux_adapter.zig  test_macos_adapter.zig  time.zig  tun_adapter.zig  unix.zig
src/protocol/: auth.zig  compress.zig  crypto.zig  http_client.zig  keepalive.zig  mod.zig  node_info.zig  pack.zig  packet.zig  session.zig  session_loop.zig  ssl_socket.zig  translator.zig  vpn.zig  vpn_protocol.zig
src/security/: utils.zig
src/tests/: test_pure_client.zig
src/tun/: macos.zig  tun.zig
test/: build_test.sh  test_direct_api.c
tests/: cedar_integration_test.zig  test_dual_mode.zig  test_handshake_comparison.zig  test_protocol_comparison.zig  tls_migration_test.zig
(+34 files in other folders)
