[package]
name = "cedar"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"
description = "Cedar VPN protocol layer for SoftEtherZig"

[dependencies]
# Mayaqua foundation layer with sha1 support
mayaqua = { path = "../mayaqua", features = ["sha1-compat"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Add test dependencies as needed

[lib]
name = "cedar"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.27"
