[package]
name = "cedar"
version = "0.1.0"
edition = "2021"
authors = ["SoftEther VPN Rust Team"]
license = "Apache-2.0"
description = "Cedar VPN protocol layer for SoftEtherZig"

[dependencies]
# Mayaqua foundation layer (sha1 always available now)
mayaqua = { path = "../mayaqua" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding/decoding for auth
base64 = "0.22"

# SHA-1 for secure password computation
sha1 = "0.10"

# Hostname for NodeInfo
hostname = "0.4"

# TLS implementation with rustls
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1"
webpki-roots = "0.26"

[dev-dependencies]
# Add test dependencies as needed

[lib]
name = "cedar"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.27"
