[package]
name = "mayaqua"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SoftEther VPN Project"]
description = "Mayaqua - Memory, Buffer, and Utility Library for SoftEther VPN"

[dependencies]
libc = "0.2"
tokio = { version = "1.0", features = ["time"], optional = true }
sha1 = "0.10"  # SHA-1 hashing (both main and optional)
flate2 = { version = "1.0", optional = true }
dirs = "5.0"  # Platform-specific directory paths
serde = { version = "1.0", features = ["derive"] }  # Serialization framework
serde_json = "1.0"  # JSON serialization/deserialization
rustls = { version = "0.21", features = ["dangerous_configuration"] }  # TLS implementation with insecure mode for testing
rustls-native-certs = "0.6"  # System certificate loading
webpki-roots = "0.25"  # Root certificates

[features]
default = []
async = ["tokio"]
compress = ["flate2"]

[dev-dependencies]
# For sha0 compatibility tests
sha1 = "0.10"
base64 = "0.22"

[lib]
name = "mayaqua"
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for debugging initially

[build-dependencies]
cbindgen = "0.27"
