[package]
name = "mayaqua-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "FFI bindings for Mayaqua library - drop-in replacement for C API"

[dependencies]
mayaqua-core = { path = "../mayaqua-core" }
libc.workspace = true

[build-dependencies]
cbindgen = "0.27"

[lib]
name = "mayaqua"
crate-type = ["staticlib", "cdylib"]
